--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ jobs:
   validate:
     name: build
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Set up Go 1.x
         uses: actions/setup-go@v2
@@ -17,7 +19,11 @@ jobs:
       - name: build
         run: make build
       - name: test
-        run: make test
+        run: make test-coverage
+      - name: Send coverage
+        env:
+          COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: bin/goveralls -coverprofile=accelerated-bridge.cover -service=github
   image:
     name: image build
     runs-on: ubuntu-latest
