--- a/.github/workflows/image-push-release.yaml
+++ b/.github/workflows/image-push-release.yaml
@@ -30,9 +30,9 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.IMAGE_NAME }}
+          flavor: |
+            latest=false
           tags: |
-            type=ref,event=branch,enable=${{ github.ref == 'refs/heads/master' }}
-            type=sha,format=long,enable=${{ github.ref == 'refs/heads/master' }}
             type=semver,pattern={{version}},enable=${{ contains(github.ref, 'refs/tags/v') }}
 
       - name: build and push accelerated-bridge-cni
@@ -102,9 +102,9 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.IMAGE_NAME }}
+          flavor: |
+            latest=false
           tags: |
-            type=ref,event=branch,enable=${{ github.ref == 'refs/heads/master' }}
-            type=sha,format=long,enable=${{ github.ref == 'refs/heads/master' }}
             type=semver,pattern={{version}},enable=${{ contains(github.ref, 'refs/tags/v') }}
 
       - name: build and push accelerated-bridge-cni
@@ -129,10 +129,10 @@ jobs:
       uses: docker/metadata-action@v4
       with:
         images: ${{ env.IMAGE_NAME }}
+        flavor: |
+          latest=false
         tags: |
-          type=ref,event=branch,enable=${{ github.ref == 'refs/heads/master' }}
-            type=sha,format=long,enable=${{ github.ref == 'refs/heads/master' }}
-            type=semver,pattern={{version}},enable=${{ contains(github.ref, 'refs/tags/v') }}
+          type=semver,pattern={{version}},enable=${{ contains(github.ref, 'refs/tags/v') }}
 
     - name: login to GitHub Container Registry
       uses: docker/login-action@v2
