--- a/.github/workflows/image-push-release.yaml
+++ b/.github/workflows/image-push-release.yaml
@@ -145,7 +145,7 @@ jobs:
 
     - name: create manifest for multi-arch images
       run: |
-        docker buildx imagetools create -t ${{ env.IMAGE_NAME }}:${{ steps.docker_meta.outputs.tags }} \
-        ${{ env.IMAGE_NAME }}:${{ steps.docker_meta.outputs.tags }}-amd64 \
-        ${{ env.IMAGE_NAME }}:${{ steps.docker_meta.outputs.tags }}-arm64 \
-        ${{ env.IMAGE_NAME }}:${{ steps.docker_meta.outputs.tags }}-ppc64le
+        docker buildx imagetools create -t ${{ steps.docker_meta.outputs.tags }} \
+          ${{ steps.docker_meta.outputs.tags }}-amd64 \
+          ${{ steps.docker_meta.outputs.tags }}-arm64 \
+          ${{ steps.docker_meta.outputs.tags }}-ppc64le
